@@ -700,6 +700,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 2658) Don't attempt to set the TZ environment variable.
 * (bug 9794) User rights log entries for foreign user now links to the foreign
   user's page if possible
+* (bug 14717) Don't load nonexistent CSS fix files for non-Monobook skins
 
 == API changes in 1.16 ==
 
